Fix navbar button margins being aligned too far right

--- a/styles/style.css
+++ b/styles/style.css
@@ -33,7 +33,7 @@ body {
 }
 
 header {
-  padding: 1em 1em 1em 2em;
+  padding: 1em 2em 1em 2em;
   color: var(--white);
   font-weight: bold;
   margin: 0 auto;
